# vlc-qt

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILDING.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL  LICENSE.md  NEWS  README  README.md  build-package.sh  cmake_uninstall.cmake.in  packaging
cmake/: FindLIBVLC.cmake  FindLIBVLCQT.cmake  InstallDirRecursive.cmake  InstallFile.cmake  ManageString.cmake  Qt5.cmake
config/: CodeCoverage.cmake  CompilerConfig.cmake  CustomTargets.cmake  Dependencies.cmake  Macros.cmake  Package.cmake  ParseVersion.cmake  Platform.cmake  cmake_uninstall.cmake.in
data/: logo.qrc
debian/: README.source  changelog  changelog-maverick  control  copyright  docs  libvlc-qt-core1.install  libvlc-qt-core2.dirs  libvlc-qt-core2.install  libvlc-qt-dev.dirs  libvlc-qt-dev.install  libvlc-qt-get-orig-source  libvlc-qt-qml1.install  libvlc-qt-qml2.dirs  libvlc-qt-qml2.install  libvlc-qt-widgets1.install  libvlc-qt-widgets2.install  rules
doc/: CMakeLists.txt  Doxyfile.in  footer.html  header.html
docs/: CMakeLists.txt  Doxyfile.in  contributing.md  index.md
examples/demo-player/: CMakeLists.txt  Makefile  README  cmake_uninstall.cmake.in  demo-player.pro
examples/demo-player/cmake/: FindLIBVLCQT.cmake
examples/demo-player/src/: CMakeLists.txt  DemoPlayer.cpp  DemoPlayer.h  DemoPlayer.ui  EqualizerDialog.cpp  EqualizerDialog.h  Makefile  demo-player  main.cpp  moc_DemoPlayer.cpp  moc_EqualizerDialog.cpp  src.pro  ui_DemoPlayer.h  ui_EqualizerDialog.h
osx/: CMakeLists.txt  vlc_rpath.sh
pkgconfig/: CMakeLists.txt  libvlc-qt-widgets.pc.in
platform/: OSX.cmake  Windows.cmake  (+1 more)
platform/osx/: CMakeLists.txt  Info.plist.in
src/: AudioControl.cpp  AudioControl.h  CMakeLists.txt  Config.h.in  Instance.cpp  Instance.h  SeekWidget.cpp  SeekWidget.h  VideoControl.cpp  VideoControl.h  VideoWidget.cpp  VideoWidget.h  VolumeSlider.cpp  VolumeSlider.h
src/core/: AbstractVideoFrame.cpp  AbstractVideoFrame.h  AbstractVideoStream.cpp  AbstractVideoStream.h  Audio.cpp  Audio.h  CMakeLists.txt  Common.cpp  Common.h  Enums.cpp  Enums.h  Equalizer.cpp  Equalizer.h  Error.cpp  Error.h  Instance.cpp  Instance.h  Media.cpp  Media.h  MediaList.cpp  MediaList.h  MediaListPlayer.cpp  MediaListPlayer.h  MediaMeta.cpp  MediaMeta.h  MediaPlayer.cpp  MediaPlayer.h  MetaManager.cpp  MetaManager.h  ModuleDescription.cpp  ModuleDescription.h  SharedExport.h  SharedExportCore.h  Stats.h  TrackModel.cpp  TrackModel.h  Video.cpp  Video.h  VideoDelegate.cpp  VideoDelegate.h  (+11 more)
src/core/platform/: VlcPluginsIOS.c
src/gui/: AudioControl.cpp  AudioControl.h  SeekWidget.cpp  SeekWidget.h  VideoControl.cpp  VideoControl.h  VideoWidget.cpp  VideoWidget.h  VolumeSlider.cpp  VolumeSlider.h
src/internal/: Encoding.cpp  Encoding.h
src/platform/windows/: core.rc  core.rc.in  extern.rc.in  qml.rc  qml.rc.in  widgets.rc  widgets.rc.in
src/plugins/VLCQt/: CMakeLists.txt  Plugin.cpp  VLCQt.rc.in  VLCQtPlugin.cpp  VLCQtPluginResource.qrc  linux.sh.in  qmldir  qmldir.in  windows.bat.in
src/qml/: CMakeLists.txt  QMLVideoPlayer.cpp  QMLVideoPlayer.h  Qml.cpp  Qml.h  QmlPlayer.cpp  QmlPlayer.h  QmlSource.cpp  QmlSource.h  QmlVideoObject.cpp  QmlVideoObject.h  QmlVideoOutput.cpp  QmlVideoOutput.h  QmlVideoPlayer.cpp  QmlVideoPlayer.h  QmlVideoPlayer4.h  QmlVideoPlayer5.h  SharedExportQml.h  TracksModel.cpp  TracksModel.h  VlcTrackModel.cpp  VlcTrackModel.h
src/qml/graphicsview/: AbstractVideoGraphicsPainter.h  GlPainter.cpp  GlPainter.h  GlslPainter.cpp  GlslPainter.h  QPainterPainter.cpp  QPainterPainter.h  VideoFrame.h  VideoGraphicsObject.cpp  VideoGraphicsObject.h  VideoMemoryStream.cpp  VideoMemoryStream.h
src/qml/painter/: GlPainter.cpp  GlPainter.h  GlslPainter.cpp  GlslPainter.h
src/qml/rendering/: QmlVideoStream.cpp  QmlVideoStream.h  VideoMaterial.cpp  VideoMaterial.h  VideoMaterialShader.cpp  VideoMaterialShader.h  VideoNode.cpp  VideoNode.h
src/widgets/: CMakeLists.txt  ControlAudio.cpp  ControlAudio.h  ControlVideo.cpp  ControlVideo.h  SharedExportWidgets.h  VLCQtWidgets.rc.in  WidgetSeek.cpp  WidgetSeek.h  WidgetSeekProgress.cpp  WidgetSeekProgress.h  WidgetVideo.cpp  WidgetVideo.h  WidgetVolumeSlider.cpp  WidgetVolumeSlider.h  libVLCQtWidgets.pc.in
test/: CMakeLists.txt  TestDualInstance.cpp  TestDualInstance.h  TestDualPlayer.cpp  TestDualPlayer.h  TestMain.cpp  TestMain.h  TestMain.ui  TestMetaManager.cpp  TestMetaManager.h  TestMetaManager.ui  TestPlayer.cpp  TestPlayer.h  TestPlayer.ui  TestRecorder.cpp  TestRecorder.h  TestRecorder.ui  main.cpp
tests/: CMakeLists.txt  Tests.cpp  Tests.h  Tests.ui  TestsConfig.h.in  main.cpp
tests/app/: CMakeLists.txt
tests/app/rpath/: CMakeLists.txt  main.cpp  main.qml
tests/common/: MetaManager.cpp  MetaManager.h  MetaManager.ui  Recorder.h  TestsCommon.cpp  TestsCommon.h
tests/common/dual/: Dual.ui  DualInstance.cpp  DualPlayer.cpp
tests/core/: CMakeLists.txt  TestInstance.cpp  TestMedia.cpp  TestMediaList.cpp  TestMetaManager.cpp
tests/qml/: CMakeLists.txt  TestQml.cpp  qml.qrc  tst_video.qml  video.qml
tests/test-core/: CMakeLists.txt  main.cpp
tests/test-qml/: CMakeLists.txt  main.cpp  qml.qrc
tests/test-qml/qml/: Bubble.qml  Slider.qml  video.qml
tests/test-qml/qmlapplicationviewer/: qmlapplicationviewer.cpp  qmlapplicationviewer.h
tests/test-qml/qt4/: video.qml
tests/test-qml/qt5/: video.qml
tests/test-widgets/: CMakeLists.txt  EqualizerDialog.cpp  EqualizerDialog.h  TestDual.ui  TestDualInstance.cpp  TestDualInstance.h  TestDualPlayer.cpp  TestDualPlayer.h  TestMain.cpp  TestMain.h  TestMain.ui  TestMetaManager.cpp  TestMetaManager.h  TestMetaManager.ui  TestPlayer.cpp  TestPlayer.h  TestPlayer.ui  TestRecorder.cpp  TestRecorder.h  main.cpp
tests/widgets/: CMakeLists.txt  EqualizerDialog.h  EqualizerDialog.ui  Player.cpp  Player.h  Player.ui  TestPlayer.cpp
tests/widgets/ui/: Player.cpp  Player.h  Player.ui
windows/: CMakeLists.txt  vlc-patch
windows/vlc_headers/2.0/: vlc_common.h
windows/vlc_headers/2.1/: vlc_threads.h
(+103 files in other folders)
